# drop2

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  build.sh
drop/: CMakeLists.txt  README.md
drop/apps/dropreg/: CMakeLists.txt
drop/apps/dropreg/src/: main.cpp
drop/apps/randomwarp/: CMakeLists.txt
drop/apps/randomwarp/src/: main.cpp
drop/cmake/: FindTBB.cmake
drop/include/: dropCommon.h  dropFFD.h  dropLinear.h  dropNonlinear.h  dropSimplex.h
drop/src/: dropCommon.cpp  dropFFD.cpp  dropLinear.cpp  dropNonlinear.cpp  dropSimplex.cpp
itkio/: CMakeLists.txt  README.md
itkio/include/: itkio.h
itkio/src/: itkio.cpp
mia/: CMakeLists.txt  README.md
mia/apps/: CMakeLists.txt
mia/apps/filter/: CMakeLists.txt
mia/apps/filter/src/: main.cpp
mia/apps/reorient/: CMakeLists.txt
mia/apps/reorient/cmake/: BasicConfig.cmake
mia/apps/reorient/src/: main.cpp
mia/apps/resample/: CMakeLists.txt
mia/apps/resample/src/: main.cpp
mia/cmake/: BasicConfig.cmake
mia/include/: miaHistogram.h  miaImage.h  miaImageIterator.h  miaImageProcessing.h
mia/src/: miaHistogram.cpp  miaImage.cpp  miaImageProcessing.cpp
mia/test/: CMakeLists.txt
mia/test/src/: main.cpp
mrfopt/: CMakeLists.txt  README.md
mrfopt/examples/: CMakeLists.txt
mrfopt/examples/denoising/: CMakeLists.txt
mrfopt/examples/denoising/src/: main.cpp
mrfopt/examples/segmentation/: CMakeLists.txt
mrfopt/examples/segmentation/cmake/: FindConfig.cmake
mrfopt/examples/segmentation/src/: main.cpp
mrfopt/ext/elc/: ELC.h  ELC0.h  readme.txt
mrfopt/ext/qpbo/: QPBO.h
mrfopt/include/: Optimization.h  Optimization.hpp  RandomField.h  RandomField.hpp
mrfopt/src/: Optimization.cpp  RandomField.cpp
